openshift/hangman-dc.yaml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: hangman
  app: hangman
spec:
  strategy:
    type: Recreate
    resources: {}
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
        - hangman
      from:
        kind: ImageStreamTag
        name: hangman:latest
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
        - nginx-hangman
      from:
        kind: ImageStreamTag
        name: nginx-hangman:latest
  replicas: 1
  selector:
    name: hangman
    app: hangman
  template:
    metadata:
      creationTimestamp: 
      labels:
        name: hangman
        app: hangman
    spec:
      containers:
      - name: nginx-hangman
        image: 172.30.1.1:5000/myproject/nginx-hangman:latest
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            protocol: "TCP"
        capabilities: {}
      - name: hangman
        image: 172.30.1.1:5000/myproject/hangman:latest
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        capabilities: {}
      
      securityContext: {}
      restartPolicy: Always
      dnsPolicy: ClusterFirst
